syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "Backend/pb";

message loginUserRequest {
    string Email = 1;
    string Password = 2;
}

message loginUserResponse {
    string SessionsID = 1;
    int32 UserID = 2;
    string Email = 3;
    google.protobuf.Timestamp CreateAt = 4;
    string AccessToken = 5;
    google.protobuf.Timestamp  AccessTokenExpiresAt = 6;
}